# scrapper-dwh

./: LICENSE  README.md  config.toml  packages.ps1  pyproject.toml  requirements.txt
data/: branches.json  customers.xlsx  products.csv  sales.xml
scrapper/src/: main.py
scrapper/src/config/: config.py  manager.py
scrapper/src/entities/: product.py
scrapper/src/scrappers/: scrapper.py  scrapper_products.py
scrapper/src/utils/schemas/: abc.py
src/: main.py
src/database/: conection.py
src/entities/: product.py
src/graphics/: operations.py  plotters.py  statistics.py
src/mappers/: product_mapper.py
src/models/: database.py  product_product.py  product_response.py
src/scrappers/: scrapper.py
src/utils/: loads.py  mappers.py  messages.py  transforms.py  typed.py
src/utils/errors/: scrapper.py
src/utils/schemas/: enums.py
test/: test.py  testcsv.py  testxlsx.py  testxml.py
