[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Scrapper"
version = "0.1.0"
description = "A web scraper for products"
authors = [{ name = "Mauricio Blanco", email = "mauriblanco.s@gmail.com" }]
requires-python = ">= 3.10.10"
readme = "README.md"
keywords = ["scraper", "web scraping", "products"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "colorama",
    "fake-useragent",
    "fastapi",
    "lxml",
    "pandas",
    "python-dotenv",
    "uvicorn",
]
